# ferrmion

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  BK.plk  CHANGELOG.md  Cargo.toml  JKMN.plk  JW.pkl  KNTO.pkl  LICENSE  PE.plk  README.md  pyproject.toml  qham2.pkl  qham3.plk
docs/source/: conf.py  devices.rst  encoding.md  encoding.rst  index.md  index.rst  utils.rst
ferrmion/: .problem-solving.ipynb  __init__.py  base.py  devices.py  knto.py  ternary_tree.py  ternary_tree_node.py  utils.py
python/ferrmion/: __init__.py  base.py  devices.py  knto.py  slow.py  ternary_tree.py  ternary_tree_node.py  utils.py
python/ferrmion/optimize/: rett.py
python/tests/: test_base_encoding.py  test_rust_functions.py  test_ternary_tree.py  test_utils.py
src/: lib.rs
tests/: test_base_encoding.py  test_ternary_tree.py  test_utils.py
tests/hamiltonians/: ones.pkl  ones_spinorb.pkl  qham1.pkl  qham2.plk  qham3.pkl  twos.pkl
