[package]
name = "ferrmion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ferrmion"
crate-type = ["cdylib"]

[dependencies]
ndarray = "0.16.1"
num-complex = "0.4.6"
numpy = "0.24.0"
pyo3 = {version = "0.24.0", features = ["num-complex"]}
