[project]
name = "ferrmion"
version = "0.0.1"
description = "Fermion to qubit encodings methods (with rust acceleration?)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.2.4",
    "openfermion>=0.11.0",
    "pydantic>=2.11.2",
    "pyscf>=2.8.0",
    "qiskit>=1.4.2",
    "scipy>=1.15.2",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pytest>=8.3.5",
]
