[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "ferrmion"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "numpy>=1.24.4",
    "openfermion>=0.11.0",
    "pydantic>=2.10.6",
]

[tool.maturin]
python-source = "python"
features = ["pyo3/extension-module"]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pre-commit>=3.5.0",
    "pytest>=8.3.5",
    "pytest-benchmark>=4.0.0",
]

[tool.ruff]
exclude = ["docs/", "python/tests/"]
line-length = 88
indent-width = 4

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint]
select = [
    "E4", "E7", "E9",
    "F",
    "D", #pydocstyle (lets add this when we actually write docstrings)
    "I", #isort
]
ignore = ["E741"]
